Added backgrounds and other details

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mappa dei Bagni di Londra e Meteo</title>
+    <title>Un fenicottero a Londraaaaa!!! 🦩</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
-    <h1>Informazioni su Londra</h1>
+    <h1>Un Fenicottero a Londra 🦩</h1>
+    <div id="welcome-message"></div>
     <div id="toilets-section">
-        <h2>Mappa dei Bagni</h2>
+        <h2>Mappa dei Bagni 🚻</h2>
         <div id="map"></div>
     </div>
     <div id="weather-section">
-        <h2>Previsioni Meteo</h2>
+        <h2>Previsioni Meteo 🌤️</h2>
         <div id="weather"></div>
     </div>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
